<resources>
    <string name="app_name">Meetogether</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_room">AddRoomActivity</string>
    <string name="facebook_app_id">2056465994377795</string>
    <string name="fb_login_protocol_scheme">fb2056465994377795</string>
    <string name="large_text">

        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_login">Login_Page</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_home">홈</string>
    <string name="title_root">내가 찜한 경로</string>
    <string name="title_notice">공지사항</string>
    <string name="title_customer">고객센터</string>
    <string name="title_qna">Q&amp;A</string>
    <string name="title_info">마이페이지</string>
    <string name="title_logout">로그아웃</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- register -->
    <string name="register">회원가입</string>
    <string name="regist_face">*얼굴 사진을 찍어 얼굴을 등록해주세요</string>
    <string name="regis_name">이름</string>
    <string name="regis_email">계정(이메일)</string>
    <string name="regis_pw">비밀번호</string>
    <string name="regis_pwc">비밀번호 확인</string>
    <string name="regis_birth">생년월일 선택하기</string>
    <string name="regis_phone">전화번호</string>
    <string name="pw_rule">8자~20자, 영문, 숫자, 특수문자 사용</string>

    <!-- myPage -->
    <string name="my_change_pw">계정 비밀번호 변경</string>
    <string name="my_change_bank">계좌 정보 변경</string>
    <string name="my_pause_report">카드 일시정지 및 분실신고</string>
    <string name="my_disable_service">서비스 해제</string>

    <!-- customer -->
    <string name="cust_help">도움말</string>
    <string name="cust_notice">공지사항</string>
    <string name="cust_question">문의하기</string>
    <string name="cust_terms_of_use">이용약관</string>
    <string name="cust_privacy_policy">개인정보처리방침</string>
    <string name="cust_operational_policy">운영정책</string>
    <string name="cust_corporation">(주) Meetogether</string>
    <string name="cust_address">서울특별시 성북구 삼선동 삼선교로 16길 116</string>
    <string name="cust_representative">박우희 이준범 김지은 백지윤</string>
    <string name="cust_business_num">123-45-67890</string>

    <!-- pwChange -->
    <string name="change_pw_title">비밀번호 변경</string>
    <string name="change_current_pw">현재 비밀번호</string>
    <string name="change_new_pw">새 비밀번호</string>
    <string name="change_new_pwc">새 비밀번호 확인</string>
    <string name="change_pw_noti">*개인정보(연락처/생일)와 관련된 숫자 등은 비밀번호에 사용하지 마세요.</string>
    <string name="title_activity_chat">ChatActivity</string>

</resources>