<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.InfoFragment"
    android:background="@drawable/white_squ_top">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@drawable/blue_squ_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_info"
                android:textSize="20dp"
                android:textColor="#ffffff"
                android:layout_gravity="center"
                android:layout_marginTop="26dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_margin="8dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_person" />

                <TextView
                    android:id="@+id/main_name"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="top"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="10dp"
                    android:text="김한성"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="님"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_gravity="top"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="10dp" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="계정정보"
                android:textSize="12sp"
                android:layout_marginTop="28dp"
                android:layout_marginLeft="32dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="사용자ID"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="30dp"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/myrfid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="hansung"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginRight="30dp"
                    android:layout_gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="이메일"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="30dp"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/myemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="hansung@gmail.com"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginRight="30dp"
                    android:layout_gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="전화번호"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="30dp"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/myphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="010-1234-5678"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginRight="30dp"
                    android:layout_gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="생년월일"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="30dp"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/mybirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="2018년 5월 17일"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginRight="30dp"
                    android:layout_gravity="center" />

            </LinearLayout>

            <View
                android:layout_width="320dp"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryLight"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="본인인증"
                android:textSize="12sp"
                android:layout_marginLeft="32dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="이름"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="30dp"
                    android:layout_gravity="center" />

                <TextView
                    android:id="@+id/myname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="김한성"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginRight="30dp"
                    android:layout_gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="인증일자"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="30dp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="2018.05.05"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginRight="30dp"
                    android:layout_gravity="center" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="본인인증정보는 사용자 확인을 위한 목적으로만 활용되며 변경할 수 없습니다."
                android:textSize="10sp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp" />

            <View
                android:layout_width="320dp"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryLight"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:id="@+id/changepwfrag"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/my_change_pw"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_right"
                    android:layout_marginRight="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_delete"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_weight="1"
                    android:text="@string/my_disable_service"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:src="@drawable/ic_right" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>